kube/manifestsv3/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-ingressgateway
  namespace: istio-system
  labels:
    app: istio-ingressgateway
    istio: ingressgateway
    release: istio
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      protocol: HTTP
      name: http
    hosts:
    - "rob.salmond.ca"
    - "growthfestival.ca"
  - port:
      number: 443
      protocol: HTTPS
      name: https-blog
    tls:
      mode: SIMPLE
      credentialName: ingress-cert-rob
    hosts:
    - "rob.salmond.ca"
  - port:
      number: 443
      protocol: HTTPS
      name: https-growth
    tls:
      mode: SIMPLE
      credentialName: ingress-cert-growth
    hosts:
    - "growthfestival.ca"
