kube/manifestsv3/blog.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rsablog
spec:
  finalizers:
  - kubernetes

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rsablog
  namespace: rsablog
  labels:
    app: rsablog
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsablog
  template:
    metadata:
      labels:
        app: rsablog
    spec:
      containers:
      - name: rsablog
        image: rsalmond/blog:0.0.1
        imagePullPolicy: Always
        ports:
        - containerPort: 2370
        volumeMounts:
        - name: config
          mountPath: /config
          readOnly: true
        - name: content
          mountPath: /content
      volumes:
        - name: config
          configMap:
            name: rsablog
        - name: content
          persistentVolumeClaim:
            claimName: rsablog

---

apiVersion: v1
kind: Service
metadata:
  name: rsablog
  namespace: rsablog
spec:
  ports:
  - port: 2370
    name: http
  selector:
    app: rsablog

---

apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: rsablog
  namespace: rsablog
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - rob.salmond.ca
  http:
  - name: https-redirect
    match:
    - scheme:
        exact: http
    redirect:
      scheme: https
      redirectCode: 302

  - name: resume
    match:
    - uri:
        exact: /resume
      scheme:
        exact: https
    redirect:
        uri: /rsalmond/resume/
        authority: github.com

  - name: kops-talk
    match:
    - uri:
        exact: /kops-talk
      scheme:
        exact: https
    redirect:
        uri: /presentation/d/17pfzwPTNSLp8t8X_4aoUI2S62_OpNL2-QxCP--mYaEw/
        authority: docs.google.com

  - name: nginx
    match:
    - uri:
        prefix: "/files/"
      scheme:
        exact: https
    route:
    - destination:
        host: nginx.rsablog.svc.cluster.local
        port:
          number: 80

  - name: rsablog
    match:
    - uri:
        prefix: "/"
      scheme:
        exact: https
    route:
    - destination:
        host: rsablog.rsablog.svc.cluster.local
        port:
          number: 2370
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: rsablog
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: nginx:1.17.10
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        #command: ["tail"]
        #args: ["-f", "/dev/null"]
        volumeMounts:
        - name: config
          mountPath: /etc/nginx/conf.d
        - name: htpasswd
          mountPath: /etc/nginx/htpasswd
          readOnly: true
        - name: files
          mountPath: /files
        - name: growth
          mountPath: /growth
      volumes:
        - name: config
          configMap:
            name: nginx
        - name: htpasswd
          secret:
            secretName: htpasswd
        - name: files
          persistentVolumeClaim:
            claimName: nginx
        - name: growth
          persistentVolumeClaim:
            claimName: growth

---

apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: rsablog
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: nginx
