kube/manifestsv3/fear.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: fear
  namespace: rsablog
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - fearisthevibekiller.com
  http:
  - name: insta
    match:
    - uri:
        prefix: /
    redirect:
        uri: /fearisthevibekiller
        authority: instagram.com
