kube/manifestsv3/growth.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: growth
  namespace: rsablog
spec:
  gateways:
  - istio-system/istio-ingressgateway
  hosts:
  - growthfestival.ca
  http:
  - name: https-redirect
    match:
    - uri:
        prefix: /
      scheme:
        exact: http
    redirect:
      scheme: https
      redirectCode: 302
  - name: static
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: nginx.rsablog.svc.cluster.local
        port:
          number: 80
